--- a/templates/main-layout.hbs
+++ b/templates/main-layout.hbs
@@ -12,7 +12,7 @@
 </head>
 <body class="list {{href-slug}}">
 <nav>{{{partial 'nav'}}}</nav>
-<div data-render-page="{{page}}">{{{renderPage}}}</div>
+{{{renderPage}}}
 <div class="progress"><div></div></div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="{{relPath}}/shower/shower.min.js"></script>
