--- a/templates/nav.hbs
+++ b/templates/nav.hbs
@@ -1,3 +1,3 @@
-<ul class="nav">
-{{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}
-</ul>
+<nav id="nav">
+<ul><li>{{menu}}<ul>{{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}</ul></li>
+</nav>
