refinements for easier cutomization

--- a/templates/nav.hbs
+++ b/templates/nav.hbs
@@ -1,3 +1,5 @@
 <nav id="nav">
-<ul><li>{{menu}}<ul>{{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}</ul></li>
+<ul><li>{{menu}}
+<ul>{{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}</ul>
+</li></ul>
 </nav>
