--- a/css/nav.css
+++ b/css/nav.css
@@ -12,5 +12,12 @@
 
 #nav a:hover { color:#eee; background-color:#777; }
 
-.full #nav > ul > li { opacity:0.3; }
+.full #nav > ul > li { opacity:0.2; }
 .full #nav > ul > li:hover { opacity:1; }
+
+
+/* fixes a problem with clipped edit button when there are not many slides */
+@media screen {
+.list { clip:auto; }
+}
+
