--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -1,11 +1,12 @@
 <header class="caption">
-<h1>{{name}}</h1>
 {{{html}}}
 </header>
 
 {{#each _fragments}}
-<section id="{{_fragment}}" class="slide{{{class}}}"><div>
-<h2>{{name}}</h2>
+<section id="{{fragmentID}}" class="slide{{class}}"><div>
 {{{html}}}
 </div></section>
+
 {{/each}}
+
+<div class="progress"><div></div></div>
