--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -5,6 +5,7 @@
 {{#each _fragments}}
 <section id="{{fragmentID}}" class="slide{{class}}"><div>
 {{{html}}}
+{{{background-image}}}
 </div></section>
 
 {{/each}}
