--- a/css/pub-theme-shower-ribbon.css
+++ b/css/pub-theme-shower-ribbon.css
@@ -1,21 +1,56 @@
-#nav > ul { position:fixed; left:15px; top:15px; z-index:100 }
+/* shower customizations */
 
-#nav > ul > li { height:34px; text-align:center; line-height:0.9; padding:4px 12px; color:#444; font-size:1.4em; background-color:#999; cursor:pointer; }
 
-#nav > ul > li:hover { color:#fff; opacity:1; }
-
-#nav > ul > li > ul { position:absolute; top:40px; left:-1000px; background-color:#ddd; text-align:left; padding-bottom:20px;  z-index:200 }
-
-#nav > ul:hover > li > ul  { left:0px; }
-
-#nav a { display:block; line-height:1.6; padding:0 20px 0 8px; font-size:20px; text-decoration:none; background:none; white-space:nowrap; }
-
-#nav a:hover { color:#eee; background-color:#777; }
-
-.full #nav > ul > li { opacity:0.2; }
-.full #nav > ul > li:hover { opacity:1; }
-
+/* make bold text bolder */
 .slide strong {font-weight:800;}
+
+/* don't go crazy with whitespace after a p */
+.slide p { margin: 0 0 25px; }
+
+/* numbers and bullets need a bit of padding */
+.slide ol li:before, .slide ul li:before {
+  padding-right: 0.2em;
+}
+
+/* headings */
+
+.slide h1,
+.slide h2,
+.slide h3,
+.slide h4,
+.slide h5 {
+  color: #666;
+  font-weight: 700;
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.slide h1 {
+  font-size: 65px;
+  margin: 0 0 40px;
+}
+
+.slide h2 {
+  font-size: 50px;
+  margin: 0 0 35px;
+}
+
+.slide h3 {
+  font-size: 45px;
+  margin: 0 0 20px;
+}
+
+.slide h4 {
+  font-size: 40px;
+  margin: 0;
+}
+
+.slide h5 {
+  font-size: 35px;
+  margin: 0;
+}
+
+
+/* background images */
 
 .slide img[full] {
   position: absolute;
@@ -41,19 +76,33 @@
   padding: 0 5em;
 }
 
-.slide img[align=right] {
-  margin-left:1em;
-}
-
-.slide img[align=left] {
-  margin-right:2em;
-}
-
 .slide  {
   z-index: 1;
 }
 
+
+/* inline images */
+.slide img[align=right] { margin-left:1em; }
+.slide img[align=left] { margin-right:2em; }
+
+/* nav button */
+#nav > ul { position:fixed; left:15px; top:15px; z-index:100; }
+#nav > ul > li { height:34px; text-align:center; line-height:0.9; padding:4px 12px; color:#444; font-size:1.4em; background-color:#999; cursor:pointer; }
+#nav > ul > li:hover { color:#fff; opacity:1; }
+#nav > ul > li > ul { position:absolute; top:40px; left:-1000px; background-color:#ddd; text-align:left; padding-bottom:20px;  z-index:200; }
+#nav > ul:hover > li > ul  { left:0px; }
+#nav a { display:block; line-height:1.6; padding:0 20px 0 8px; font-size:20px; text-decoration:none; background:none; white-space:nowrap; }
+#nav a:hover { color:#eee; background-color:#777; }
+.full #nav > ul > li { opacity:0.2; }
+.full #nav > ul > li:hover { opacity:1; }
+
 /* fixes a problem with clipped edit button when there are not many slides */
 @media screen {
 .list { clip:auto; }
+}
+
+/* don't print the buttons */
+@media print {
+  #nav { display:none; }
+  .pub-button { display:none; }
 }
