--- a/example/static/css/extra.css
+++ b/example/static/css/extra.css
@@ -1,17 +1,1 @@
-.slide.shout h2 {
-  width: 80%;
-  left: 10%;
-  font-size: 70px;
-}
-.slide.cover h2 {
-  margin: 380px 0 0 -70px;
-  color: #fff;
-  font-size: 70px;
-}
-.slide.cover p {
-  margin-left: -70px;
-  color: #fff;
-  font-style: italic;
-  font-size: 20px;
-}
-
+/* use this for additional stylesheet overrides */
