--- a/templates/doc-layout.hbs
+++ b/templates/doc-layout.hbs
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{title}}</title>
 {{{metaSeo}}}
-<link rel="stylesheet" href="/{{#if material}}material{{else}}ribbon{{/if}}/styles/styles.css">
+<link rel="stylesheet" href="{{relPath}}/{{#if material}}material{{else}}ribbon{{/if}}/styles/styles.css">
 {{{injectCss}}}
 <style>.shower { --slide-ratio: calc({{#if wide}}16/9{{else}}4/3{{/if}}); }</style>
 </head>
